--- a/assets/style.css
+++ b/assets/style.css
@@ -28,22 +28,24 @@ body {
   border-radius: 50px;
   font-weight: 700;
   padding: 10px 18px;
-  max-width: 100%;
-  min-width: 220px;
+  width: 180px;
   height: 22px;
+  margin: 0 8px;
   background-color: #9dbff9;
   border: none;
-  margin: 0 10px;
 }
 
 .search button {
+  padding: 0 2px;
   background-color: #3e7bfa;
   border: none;
   border-radius: 20px;
-  width: 80px;
+  min-width: 100px;
   height: 40px;
   color: white;
   font-weight: 600;
+  margin-top: 24px;
+  display: inline-block;
 }
 
 .card {
@@ -83,22 +85,19 @@ body {
   -webkit-transform: scale(1.06);
           transform: scale(1.06);
   background-color: #28293d;
+  cursor: pointer;
 }
 
-.card ul li a {
-  text-decoration: none;
-}
-
-.card ul li a p {
+.card ul li .card-detail p {
   letter-spacing: 0;
   color: white;
 }
 
-.card ul li a img {
+.card ul li .card-detail img {
   width: 90%;
 }
 
-.card ul li a span {
+.card ul li .card-detail span {
   font-weight: bold;
   font-size: 0.8em;
   color: orange;
