--- a/assets/style.scss
+++ b/assets/style.scss
@@ -27,22 +27,24 @@ body{
         border-radius: 50px;
         font-weight: 700;
         padding: 10px 18px;
-        max-width: 100%;
-        min-width: 220px;
+        width: 180px;
         height: 22px;
+        margin: 0 8px;
         background-color: #9dbff9;
         border: none;
-        margin: 0 10px;
     }
 
     button {
+        padding: 0 2px;
         background-color: #3e7bfa;
         border: none;
         border-radius: 20px;
-        width: 80px;
+        min-width: 100px;
         height: 40px;
         color: white;
         font-weight: 600;
+        margin-top: 24px;
+        display: inline-block;
     }
 }
 
@@ -71,9 +73,9 @@ body{
                 transition: transform .2s;
                 transform: scale(1.06);
                 background-color: #28293d;
+                cursor: pointer;
             }
-            a{
-                text-decoration: none;
+            .card-detail {
 
                 p {
                     letter-spacing: 0;
